--- a/src/app/components/current-prompt/current-prompt.component.html
+++ b/src/app/components/current-prompt/current-prompt.component.html
@@ -7,7 +7,7 @@
       <svg xmlns="http://www.w3.org/2000/svg" width="10" height="18" viewBox="0 0 10 18" fill="none">
         <path d="M1 17L9 9L1 1" stroke="#557481" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
       </svg>
-      <p class="me-2 text-muted fs-6 ">الرجوع لصفحة التلفينات</p>
+      <p class="me-2 text-muted fs-6">الرجوع لصفحة التلفينات</p>
     </div>
     <div class="d-flex justify-content-end me-5">
       <h2 class="fs-4 mt-5 pt-5">تلقينات {{ selectedCategory }}</h2>
@@ -15,20 +15,21 @@
   </div>
 
   <div class="row g-4 mt-5 w-90 mx-auto">
-    <div *ngFor="let prompt of prompts" class="col-md-12 d-flex justify-content-between" dir="rtl">
+    <div class="search-bar mt-3 mb-3 mx-auto w-100">
+      <input type="text" class="form-control" placeholder="ابحث عن التلقينات .." [(ngModel)]="searchText" (ngModelChange)="filterPrompts()" dir="rtl">
+    </div>
+    <div *ngFor="let prompt of filteredPrompts" class="col-md-12 d-flex justify-content-between" dir="rtl">
       <div class="card h-100 text-end w-100">
         <div class="card-body">
-         <div class="d-flex justify-content-between">
-          <h5  class="mt-1 mb-2">{{ prompt.QuestionText }} </h5>
-          <i (click)="togglePrompt(prompt.QuestionID)" class="bi bi-chevron-down"></i>
-         </div>
+          <div class="d-flex justify-content-between">
+            <h5 class="mt-1 mb-2">{{ prompt.QuestionText }}</h5>
+            <i (click)="togglePrompt(prompt.QuestionID)" class="bi bi-chevron-down"></i>
+          </div>
           <div *ngIf="expandedStates.get(prompt.QuestionID)">
-            <!-- All prompts details here -->
-            <div class="" *ngIf="prompt.Prompt1">
+            <div *ngIf="prompt.Prompt1">
               <p id="textToCopy">{{ prompt.Prompt1 }}</p>
               <i class="bi bi-copy " (click)="copyText()" style="cursor: pointer;"></i>
             </div>
-            <!-- Repeat for other prompts as needed -->
           </div>
         </div>
       </div>
@@ -38,41 +39,3 @@
 <section>
   <app-footer></app-footer>
 </section>
-
-
-
-
-
-<!-- 
-    <div class="row g-4 mt-5 ">
-        <div class="col-md-12" *ngFor="let prompt of prompts">
-          <div class="card h-100 text-end">
-            <div class="card-body">
-                <h3>{{ prompt.QuestionText }}</h3>
-                <p *ngIf="prompt.Prompt1">{{ prompt.Prompt1 }}</p>
-                <p *ngIf="prompt.Prompt2">{{ prompt.Prompt2 }}</p>
-                <p *ngIf="prompt.Prompt2">{{ prompt.Prompt3 }}</p>
-
-
-
-            </div>
-        
-          </div>
-        </div>
-      </div> -->
-
-<!-- 
-
-      <div  *ngFor="let prompt of prompts" class="d-flex justify-content-between" dir="rtl">
-        <p id="textToCopy" *ngIf="prompt.Prompt1">{{ prompt.Prompt1 }}</p>
-        <i class="bi bi-copy mx-2" (click)="copyText()" style="cursor: pointer;"  dir="rtl"></i>
-      </div>
-      <div  *ngFor="let prompt of prompts" class="d-flex justify-content-between"  dir="rtl">
-        <p id="textToCopy" *ngIf="prompt.Prompt2">{{ prompt.Prompt2 }}</p>
-        <i class="bi bi-copy mx-2" (click)="copyText()" style="cursor: pointer;"></i>
-      </div>
-
-      <div  *ngFor="let prompt of prompts" class="d-flex justify-content-between"  dir="rtl">
-        <p id="textToCopy" *ngIf="prompt.Prompt2">{{ prompt.Prompt3 }}</p>
-        <i class="bi bi-copy mx-2" (click)="copyText()" style="cursor: pointer;"></i>
-      </div> -->
