--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -10,9 +10,9 @@
         <p class="me-2 text-muted">الرجوع لصفحة الأدوات</p>
       </div>
     <div class="row mt-5 ">
-      <div class="col-md-6 " >
+      <div class="col-lg-6 " >
         <a [href]="toolInfo[0]?.InstructionalVideoURL" target="_blank">
-        <div class="icon bg-main  d-flex justify-content-center align-items-center" style="width:560px; height: 315px;" >
+        <div class="icon bg-main  d-flex justify-content-center align-items-center" style="max-width:560px; height: 315px;" >
           <i class="fa-brands fa-youtube fs-1 color-red"></i>
 
         </div>
@@ -32,7 +32,7 @@
           allowfullscreen
         ></iframe> -->
       </div>
-      <div class="col-md-6 ">
+      <div class="col-lg-6 ">
         <div class="info d-flex  flex-column align-items-end">
          <div class="text d-flex justify-content-end align-items-center">
           <h2 class="">{{toolInfo[0]?.Name}}</h2>
